[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scripts/Horse/DummyHorse.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Horse/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://prefabs/Interactables/Damageable.tscn" type="PackedScene" id=3]
[ext_resource path="res://prefabs/Horses/Behaviors/HB_Idle.tscn" type="PackedScene" id=4]
[ext_resource path="res://prefabs/Horses/Lassoable.tscn" type="PackedScene" id=5]
[ext_resource path="res://prefabs/Horses/Behaviors/HB_Giddyup.tscn" type="PackedScene" id=6]
[ext_resource path="res://prefabs/Horses/Behaviors/HB_Pilot.tscn" type="PackedScene" id=7]
[ext_resource path="res://prefabs/Misc/Events/PlaySound.tscn" type="PackedScene" id=8]
[ext_resource path="res://Sounds/destroy_03.wav" type="AudioStream" id=9]
[ext_resource path="res://prefabs/Horses/RelationshipManager.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scripts/Horse/HorseInteractionController.gd" type="Script" id=12]
[ext_resource path="res://prefabs/Interactables/InteractableNoPreset.tscn" type="PackedScene" id=13]
[ext_resource path="res://Sounds/destroy_01.wav" type="AudioStream" id=14]
[ext_resource path="res://prefabs/PlayerStuff/EquipmentManager.tscn" type="PackedScene" id=15]
[ext_resource path="res://prefabs/Horses/HoldingPoint.gd" type="Script" id=16]
[ext_resource path="res://prefabs/Misc/DummyHorseModel.tscn" type="PackedScene" id=17]
[ext_resource path="res://Sounds/destroy_04.wav" type="AudioStream" id=18]
[ext_resource path="res://Sounds/destroy_02.wav" type="AudioStream" id=19]

[sub_resource type="BoxShape" id=1]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.860839, 1.21461, 1.93213 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1, 2.04084, 1.61743 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 1, 1, 1.72098 )

[node name="DummyHorse" type="KinematicBody"]
script = ExtResource( 1 )
DEACCEL = 0
MAX_ACCEL = 0
MAX_SPEED = 0
horseName = "Dummy Horse"
stats = {
"chaos": 0,
"girth": 0,
"poise": 0,
"range": 0,
"silly": 0,
"speed": 0
}

[node name="EquipmentManager" parent="." instance=ExtResource( 15 )]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="HB_Idle" parent="StateMachine" instance=ExtResource( 4 )]

[node name="HB_Giddyup" parent="StateMachine" instance=ExtResource( 6 )]

[node name="HB_Pilot" parent="StateMachine" instance=ExtResource( 7 )]

[node name="InteractionController" type="Area" parent="."]
transform = Transform( 0.783684, 0, 0, 0, 0.783684, 0, 0, 0, 0.783684, -5.1835e-09, 0.0804137, -0.0448999 )
script = ExtResource( 12 )

[node name="CollisionShape" type="CollisionShape" parent="InteractionController"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.10664, -1.29656 )
shape = SubResource( 1 )

[node name="HoldingPoint" type="Spatial" parent="."]
transform = Transform( 0.783684, 0, 0, 0, 0.783684, 0, 0, 0, 0.783684, -5.1835e-09, 2.08251, -1.0895 )
script = ExtResource( 16 )

[node name="GroundCheck" type="RayCast" parent="."]
transform = Transform( -0.783684, 0, -6.85119e-08, 0, 0.783684, 0, 6.85119e-08, 0, -0.783684, -5.52797e-08, 0.0442152, -0.0420877 )
enabled = true

[node name="Saddle" type="Spatial" parent="."]
transform = Transform( -0.783684, 0, -6.85119e-08, 0, 0.783684, 0, 6.85119e-08, 0, -0.783684, 7.35443e-09, 2.6542, 0.329372 )

[node name="Interactable" parent="." instance=ExtResource( 13 )]
transform = Transform( 0.783684, 0, 0, 0, 0.783684, 0, 0, 0, 0.783684, -5.1835e-09, 0.0804137, -0.0448999 )
playSoundOnInteract = false
prompt = "Dummy Horse"

[node name="CollisionShape" type="CollisionShape" parent="Interactable"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.77911, 0.829752 )
shape = SubResource( 2 )

[node name="DummyHorseModel" parent="." instance=ExtResource( 17 )]
transform = Transform( -0.783684, 0, -2.55356e-07, 0, 0.783684, 0, 2.55356e-07, 0, -0.783684, -5.1835e-09, 0.0804137, 0.240499 )

[node name="CollisionShape2" type="CollisionShape" parent="."]
transform = Transform( 0.783684, 0, 0, 0, 0.783684, 0, 0, 0, 0.783684, -5.1835e-09, 1.47414, 0.595135 )
shape = SubResource( 3 )

[node name="Damageable" parent="." instance=ExtResource( 3 )]
transform = Transform( 3.76198, 0, 0, 0, 3.76198, 0, 0, 0, 3.76198, 0, 0, 0 )

[node name="CollisionShape2" type="CollisionShape" parent="Damageable"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.50934, 0.463265 )
shape = SubResource( 4 )

[node name="Lassoable" parent="." instance=ExtResource( 5 )]
transform = Transform( 1.32669, 0, 0, 0, 1.32669, 0, 0, 0, 1.83006, 0, 1.70941, 0.222549 )
saddle = NodePath("../Saddle")
distThresh = 5.0

[node name="PlaySound" parent="." instance=ExtResource( 8 )]
random_sounds = [ ExtResource( 14 ), ExtResource( 19 ), ExtResource( 9 ), ExtResource( 18 ) ]

[node name="RelationshipManager" parent="." instance=ExtResource( 10 )]
[connection signal="emit_charm_recieved" from="." to="RelationshipManager" method="recieve_charm"]
[connection signal="broadcast_self" from="EquipmentManager" to="InteractionController" method="_on_EquipmentManager_broadcast_self"]
[connection signal="broadcast_self" from="EquipmentManager" to="HoldingPoint" method="_on_EquipmentManager_broadcast_self"]
[connection signal="area_entered" from="InteractionController" to="InteractionController" method="_on_InteractionController_area_entered"]
[connection signal="body_entered" from="InteractionController" to="InteractionController" method="_on_InteractionController_body_entered"]
[connection signal="broadcast_self" from="InteractionController" to="EquipmentManager" method="_on_InteractionController_broadcast_self"]
[connection signal="emit_prompt" from="Interactable" to="." method="_on_Interactable_emit_prompt"]
[connection signal="interaction" from="Interactable" to="." method="_on_Interactable_interaction"]
[connection signal="destroy" from="Damageable" to="." method="_on_Damageable_destroy"]
[connection signal="lasso_failed" from="Lassoable" to="." method="enter_idle"]
[connection signal="lassoed" from="Lassoable" to="." method="_on_Lassoable_lassoed"]
